--- a/API/view/index.html
+++ b/API/view/index.html
@@ -38,7 +38,7 @@
     
     <tr>
     <td>POST</td>
-    <td>/user</td>
+    <td>/add</td>
     <td>Used to send user data to a server, by adding a new record.</td>
     </tr>
     
