--- a/API/view/index.html
+++ b/API/view/index.html
@@ -38,8 +38,13 @@
     
     <tr>
     <td>POST</td>
-    <td>/add</td>
+    <td>/register</td>
     <td>Used to send user data to a server, by adding a new record.</td>
+    </tr>
+    <tr>
+    <td>POST</td>
+    <td>/login</td>
+    <td>login route fro the user </td>
     </tr>
     
     <tr>
@@ -68,7 +73,7 @@
     
     <tr>
     <td>POST</td>
-    <td>/product</td>
+    <td>/add</td>
     <td>Used to send product data to the server, by adding a new record.</td>
     </tr>
     
